After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696973 - Compiling 2.36.0 for win64 fails in gdbusmessage.c
Compiling 2.36.0 for win64 fails in gdbusmessage.c
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.36.x
Other Windows
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-03-31 14:48 UTC by Hib Eris
Modified: 2013-04-01 06:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-Fix-compile-error-in-gdbusmessage.c-for-win64.patch (901 bytes, patch)
2013-03-31 14:50 UTC, Hib Eris
accepted-commit_now Details | Review

Description Hib Eris 2013-03-31 14:48:50 UTC
(Cross) compiling glib 2.36.0 for mingw-w64 fails with:

[  342s] make[4]: Entering directory `/home/abuild/rpmbuild/BUILD/glib-2.36.0/gio'
[  342s]   CC       libgio_2_0_la-gdbusmessage.lo
[  342s] gdbusmessage.c: In function 'read_string':
[  342s] gdbusmessage.c:1387:20: error: format '%lu' expects argument of type 'long unsigned int', but argument 6 has type 'gsize' [-Werror=format=]
[  342s]                     (gulong)mbuf->valid_len - mbuf->pos);
[  342s]                     ^
[  342s] cc1: some warnings being treated as errors
[  342s] make[4]: *** [libgio_2_0_la-gdbusmessage.lo] Error 1
[  342s] make[4]: Leaving directory `/home/abuild/rpmbuild/BUILD/glib-2.36.0/gio'
[  342s] make[3]: *** [all-recursive] Error 1
[  342s] make[3]: Leaving directory `/home/abuild/rpmbuild/BUILD/glib-2.36.0/gio'
[  342s] make[2]: *** [all] Error 2
[  342s] make[2]: Leaving directory `/home/abuild/rpmbuild/BUILD/glib-2.36.0/gio'
[  342s] make[1]: *** [all-recursive] Error 1
[  342s] make[1]: Leaving directory `/home/abuild/rpmbuild/BUILD/glib-2.36.0'
[  342s] make: *** [all] Error 2
Comment 1 Hib Eris 2013-03-31 14:50:54 UTC
Created attachment 240209 [details] [review]
0001-Fix-compile-error-in-gdbusmessage.c-for-win64.patch
Comment 2 Colin Walters 2013-03-31 20:47:12 UTC
Review of attachment 240209 [details] [review]:

Looks right, thanks.  Do you have a GNOME git account?
Comment 3 Hib Eris 2013-04-01 06:26:28 UTC
(In reply to comment #2)
> Review of attachment 240209 [details] [review]:
> 
> Looks right, thanks.  Do you have a GNOME git account?

Yes. Shall I push it to master and glib-2-36 ?