Fix compile error in gdbusmessage.c for win64

https://bugzilla.gnome.org/show_bug.cgi?id=696973